Working around Chrome layout bug & giving logo a shadow

--- a/www/static/css/_components.scss
+++ b/www/static/css/_components.scss
@@ -8,7 +8,8 @@
   fill: #FFF;
   display: block;
   margin: 0 auto 1rem;
-  max-width: 660px;
+  position: relative;
+  padding-top: 18.98%;
   
   @media (min-width: 500px) {
     margin-top: 3rem;
@@ -18,6 +19,19 @@
   @media (min-width: 800px) {
     margin-top: 4.5rem;
     margin-bottom: 4.9rem;
+  }
+
+  @media (min-width: 720px) {
+    padding-top: 125px;
+  }
+
+  & svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
   }
 }
 
